Bug 1116762 - Add MozHomeScreen key name for home button. r=masayuki